--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,4 +26,45 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.menu-title {
+  font-size: larger;
+  padding: 10px;
+}
+
+.menu-bar {
+  display: flex;
+  flex-direction: row;
+}
+
+.menu-button {
+  font-size: large;
+  /* text-align: center; */ 
+  justify-content: center;
+  align-items: center;
+
+  height: 50px;
+  margin: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 1px;
+  border-radius: 10px;
+}
+
+.menu-button:hover {
+  background-color: #4a236f;
+}
+
+.menu-button:active {
+  background-color: #1f0f2f;
+
+}
+
 
